# Viper

./: README.md  llm.py  package-lock.json  package.json  pyproject.toml
backend/: .gitignore  BUILD.md  entrypoint.py  pyinstaller.spec  viper.sqlite3
backend/app/: api_configs.py  chat.py  db.py  main.py  runner.py  schemas.py  sessions.py
backend/app/api/: router.py
backend/app/api/routes/: bootstrap.py  chats.py  llm.py  messages.py  models.py
backend/app/core/: paths.py
backend/app/db/: database.py  tables.py  viper.db
backend/app/schemas/: __init__.py  bootstrap.py  chat.py  llm.py  message.py  model_config.py
backend/app/services/: bootstrap_service.py  llm_proxy.py
client/src/: index.css
electron/: BUILD.md  main.js  package-lock.json  package.json  preload.js
frontend/: BUILD.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
