[project]
name = "viper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.26",
  "SQLAlchemy>=2.0",
  "pydantic>=2.0",
]

[project.scripts]
viper = "backend.app.runner:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
